--- a/Headers/GNUstepBase/GSConfig.h.in
+++ b/Headers/GNUstepBase/GSConfig.h.in
@@ -275,7 +275,7 @@ typedef	struct {
 #define GS_USE_LIBDISPATCH_RUNLOOP @HAVE_LIBDISPATCH_RUNLOOP@
 #define GS_HAVE_NSURLSESSION @GS_HAVE_NSURLSESSION@
 #define GS_HAVE_OBJC_ROOT_CLASS_ATTR @GS_HAVE_OBJC_ROOT_CLASS_ATTR@
-#define GS_USE_WINDOWS_LOCKS @GS_USE_WINDOWS_LOCKS@
+#define GS_USE_WIN32_LOCKS @GS_USE_WIN32_LOCKS@
 
 #ifndef __has_include
 #  define __has_include(x) 0
