--- a/Headers/GNUstepBase/GSConfig.h.in
+++ b/Headers/GNUstepBase/GSConfig.h.in
@@ -276,6 +276,7 @@ typedef	struct {
 #define GS_HAVE_NSURLSESSION @GS_HAVE_NSURLSESSION@
 #define GS_HAVE_OBJC_ROOT_CLASS_ATTR @GS_HAVE_OBJC_ROOT_CLASS_ATTR@
 #define GS_USE_WIN32_LOCKS @GS_USE_WIN32_LOCKS@
+#define GS_USE_WIN32_THREADS @GS_USE_WIN32_THREADS@
 
 #ifndef __has_include
 #  define __has_include(x) 0
