Streamlined native Windows thread and locks integration
Added GSAtomic.h adopted from FreeBSD to support atomic load/store with GCC, with proper configure check to see whether it compiles. Guarded all pthread-related configure checks. Improved formatting.

--- a/Headers/GNUstepBase/GSConfig.h.in
+++ b/Headers/GNUstepBase/GSConfig.h.in
@@ -275,8 +275,7 @@ typedef	struct {
 #define GS_USE_LIBDISPATCH_RUNLOOP @HAVE_LIBDISPATCH_RUNLOOP@
 #define GS_HAVE_NSURLSESSION @GS_HAVE_NSURLSESSION@
 #define GS_HAVE_OBJC_ROOT_CLASS_ATTR @GS_HAVE_OBJC_ROOT_CLASS_ATTR@
-#define GS_USE_WIN32_LOCKS @GS_USE_WIN32_LOCKS@
-#define GS_USE_WIN32_THREADS @GS_USE_WIN32_THREADS@
+#define GS_USE_WIN32_THREADS_AND_LOCKS @HAVE_WIN32_THREADS_AND_LOCKS@
 
 #ifndef __has_include
 #  define __has_include(x) 0
